Add setting buttons on the pop up

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,9 @@
       "default_popup": "popup.html",
       "default_icon": "assets/icon.png"
     },
-    "options_page": "options.html"
+    "options_ui": {
+  "page": "options.html",
+  "open_in_tab": false
+}
   }
   
